# personal_website_old

./: .gitignore  Dockerfile  README.md  apache.conf.example  babel.cfg  cherrypy_systemd.service.example  config.py  docker-compose.yml  logger.py  personal_website.wsgi.example  pyproject.toml  server.py  website.py
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml
personal_website/: __init__.py  cli.py
personal_website/main/: __init__.py  errors.py  posts.py  views.py
personal_website/main/ar/: views.py
personal_website/main/en/: views.py
personal_website/main/utils/: posts.py
personal_website/posts/ar/: nextdns-customization.md  nextdns.md  test_ar.md  youtube-distraction-free.md
personal_website/posts/en/: debugging-and-fixing-selenium-send-keys-wrong-text-input.md  test_en.md
personal_website/static/: gulpfile.js  package-lock.json  package.json
personal_website/static/css/: clean-blog.css  clean-blog.min.css
personal_website/static/js/: clean-blog.js  clean-blog.min.js
personal_website/static/scss/: _footer.scss  _global.scss  _masthead.scss  _mixins.scss  _navbar.scss
personal_website/templates/: 404.html  500.html  about.html  base.html  base_rtl.html  blog.html  contact.html  error.html  index.html  index_ar.html  post.html  projects.html
personal_website/templates/includes/: footer.html  navbar.html
personal_website/translations/ar/LC_MESSAGES/: messages.po
