[tool.poetry]
name = "personal_website"
version = "0.1.0"
description = "My personal website"
authors = ["yshalsager <ysh-alsager@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
flask = "^2.0.1"
flask-babel = "^2.0.0"
markdown = "^3.3.4"
Flask-Sitemap = "^0.3.0"
feedgen = "^0.9.0"
cherrypy = "^18.6.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
